[gd_scene load_steps=2 format=3 uid="uid://dq6gytyu1pppy"]

[ext_resource type="Script" path="res://game/waste/_base/waste_base.gd" id="1_5og72"]

[node name="WasteBase" type="CharacterBody3D"]
collision_layer = 64
collision_mask = 91
script = ExtResource("1_5og72")

[node name="LifetimeTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
